--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/assignment2 test/index.html"
+    "livePreview.defaultPreviewPath": "/Fahnerpizzaopenspace/index.html"
 }
