--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/Clockcolorchange1min/index.html"
+    "livePreview.defaultPreviewPath": "/Webmidicodecraig/index.html"
 }
